--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     <main id="main">
       <div class="random-dog">
-        <img id="dog-img" alt="Random dog photo">
+        <img id="dog-img" alt="">
         <input id="dog-button" type="button" value="RANDOM DOG PHOTO">
       </div>
       <div>
