--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <link rel="icon" type="image/x-icon" href="/images/icons8-dog-heart-16.png">
     <title>Pets</title>
   </head>
@@ -24,7 +24,7 @@
       </nav>
     <main id="main">
       <div class="random-dog">
-        <img id="dog-img" alt="">
+        <img id="dog-img" src="" alt="">
         <input id="dog-button" type="button" value="RANDOM DOG PHOTO">
       </div>
       <div>
